# solona_copytradebot

./: .env  .env.example  Cargo.toml  техзадание.md
benches/: trading_bench.rs  transaction_bench.rs
src/: config.rs  error.rs  lib.rs  main.rs
src/analytics/: stats.rs
src/http/: mod.rs  pool.rs  race_client.rs  rate_limiter.rs
src/processor/: cache.rs  mod.rs  swap_detector.rs  transaction.rs  worker.rs
src/trading/: engine.rs  jupiter.rs  mod.rs  risk.rs  signer.rs
src/transport/: mod.rs  trait.rs
src/transport/grpc/: client.rs  mod.rs
src/transport/websocket/: manager.rs
src/utils/: mod.rs  time.rs  token.rs
