[package]
name = "solana-wallet-monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full", "rt-multi-thread", "time"] }

# Transport (WebSocket)
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"

# gRPC
tonic = "0.11"
prost = "0.12"
prost-types = "0.12"

# HTTP Client
reqwest = { version = "0.11", features = ["json", "rustls-tls", "stream"] }

# Solana SDK
solana-sdk = "1.18"
solana-client = "1.18"
solana-transaction-status = "1.18"
solana-account-decoder = "1.18"

# Cryptography
bs58 = "0.5"
base64 = "0.21"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }

# Data Structures
dashmap = "5.5"
parking_lot = "0.12"
arc-swap = "1.6"

# Configuration
config = "0.14"
dotenv = "0.15"

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Utils
chrono = "0.4"
uuid = { version = "1.6", features = ["v4"] }
async-trait = "0.1.89"
url = "2.5.7"
bincode = "1.3"

[build-dependencies]
tonic-build = "0.11"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
