[package]
name = "solana-wallet-monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async Engine
tokio = { version = "1.36", features = ["full"] }

# Solana Ecosystem (Pinned to 1.18 for stability)
solana-sdk = "1.18"
solana-client = "1.18"
solana-account-decoder = "1.18"
solana-transaction-status = "1.18"
spl-token = "4.0"
spl-associated-token-account = "2.3"

# Cryptography (DOWNGRADED for compatibility, Force curve25519 for resolution)
ed25519-dalek = "1.0.1"
curve25519-dalek = "3.2.1"
bs58 = "0.5"

# Networking & TLS (Fixed for Windows: rustls ONLY)
# We disable default-features to avoid native-tls
# Downgraded tokio-tungstenite to 0.20 to attempt to resolve zeroize conflict
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "stream"] }
tokio-tungstenite = { version = "0.20", features = ["rustls-tls-webpki-roots"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Logging & Utils
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenv = "0.15"
chrono = "0.4"
dashmap = "5.5"
futures = "0.3"
futures-util = "0.3"
async-trait = "0.1"
base64 = "0.21"
thiserror = "1.0"
url = "2.5"

# gRPC (Restored for existing code)
tonic = "0.11"
prost = "0.12"
prost-types = "0.12"

[build-dependencies]
tonic-build = "0.11"
